tests/errors/compiler/break_not_in_loop_or_switch/break_in_main.c
void main()
{
	print("before");
	break;
	print("after");
}
